Create the DOCKER_BUILDER_WORKDIR in the slave images
* It's safer to create the working directory in the container before
  mounting the volume.
* When running the sonic-buildimage scripts in a container with a volume
  that will be passed to the slave container via DOCKER_BUILDER_MOUNT,
  the ownership can change to root instead of the unprivileged user
  created to build the image.

Change-Id: If135f215a594e02bb08648c9fa9a2c88816d0601

--- a/Makefile.work
+++ b/Makefile.work
@@ -96,6 +96,7 @@ DOCKER_BUILD = docker build --no-cache \
 	       --build-arg uid=$(shell id -u) \
 	       --build-arg guid=$(shell id -g) \
 	       --build-arg hostname=$(shell echo $$HOSTNAME) \
+	       --build-arg workdir=$(DOCKER_BUILDER_WORKDIR) \
 	       -t $(SLAVE_IMAGE) \
 	       -f $(SLAVE_DIR)/Dockerfile.user \
 	       $(SLAVE_DIR) && \
